--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
-  "name": "screen-res",
+  "name": "ck-screen-res",
   "version": "0.0.1",
+  "description": "Responsive main page cover",
   "peerDependencies": {
     "@angular/common": "^8.2.14",
     "@angular/core": "^8.2.14"
   },
+  "author": {"name": "Chipili Kafwilo", 
+    "email": "ckafwilo@gmail.com"},
+  "repository": {"type": "git", 
+    "url": "https://github.com/ChipiKaf/Screen-res-library"},
   "dependencies": {
     "@angular/cdk": "^8.2.3",
     "@angular/flex-layout": "^7.0.0-beta.24"
